config/actual-budget/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
