config/actual-budget/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  namespace: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: finance.newjoy.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-budget
                port:
                  number: 5006
